--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+
+        android:hardwareAccelerated="true"
+        android:largeHeap="true">
+        <!--this last two are for Picasso:-->
 
         <!-- Declare the MainActivity in the manifest and set it to launch upon opening this app -->
         <activity android:name=".ui.MainActivity" >
@@ -17,8 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.AndroidMeActivity" />
 
     </application>
 
