--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,14 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+
+        android:hardwareAccelerated="true"
+        android:largeHeap="true">
 
         <!-- Declare the MainActivity in the manifest and set it to launch upon opening this app -->
-        <activity android:name=".ui.MainActivity" >
+        <activity android:name=".ui.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +22,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.AndroidMeActivity" />
+        <activity android:name=".ui.AndroidMeActivity"
+            android:launchMode="singleTask"
+            android:parentActivityName=".ui.MainActivity">
+            <!--android:screenOrientation="portrait">-->
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity"/>
+        </activity>
 
-    </application>
+</application>
 
 </manifest>
